--- a/text/content.tex
+++ b/text/content.tex
@@ -14,10 +14,12 @@ Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund w
 Das Problembasierte Lernen, wie im Zitat deutlich wird, bezieht sich auf das Erarbeiten von selbstständigen Lösungsansätzen zum Lösen eines Problems. Der Lernende soll ein Thema selbstständig erarbeiten, ohne das jemand anderes einen Lösungsweg vorzeichnet. Auf dem Weg zu der Lösung eines Problems muss er evtl. mehrere Ansätze probieren um sein Ziel zu erreichen. Wie im Zitat bereits erwähnt steht der Lernende im Mittelpunkt. Der Lernende muss hierbei selbst die Initiative ergreifen. Ein Lehrer steht beim Lernprozess nur als Helfende Hand zur Seite. Er dient dabei lediglich als Coach, der evtl. aufkommende Fragen des Lernenden beantwortet und ihn in eine spezielle Richtung leitet, falls der Lernende nicht mehr weiterkommt. Beim Thema Software haben wir eine ähnliche Problemstellung. Ein möglicher Anwender kommt an einem Punkt in der Software nicht mehr weiter und muss selbstständig eine Lösung für das konkrete Problem finden. 
  
 \subsection{Differenzielles Lernen}
-Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problembasierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen.  Diese beiden Konzepte des Lernens wollen wir in dieser Arbeit für unsere Empfehlung verwenden.
+Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problembasierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen. Von einem Lehrer wird ein konkretes Problem vorgegeben. Dieses Problem soll im Anschluss auf verschiedene Wege gelöst werden. Durch die Differenzierung entsteht ein grobes Bild im Kopf, wie ein Lösungsansatz aussehen soll. Im Techniktraining im Sport zum Beispiel wie eine konkrete Technik im Sport aussehen soll. Wenn es in Zukunft zu einem solchen Problem kommt, so kann der Lernende aus verschiedenen Lösungsmöglichkeiten die passende auswählen. Diese Möglichkeit gibt es bei der Bedienung von Software auch. Hier ist es ebenfalls möglich eine konkrete Problemstellung, wie beispielsweise das Anlegen eines Adressdatensatzes auf verschiedene Wege zu lösen. Aus diesem Grund ist der differenzielle Lernansatz in unserer Arbeit interessant.
+
 
 \section{Game-Based Learning}
-Ein wichtiger Stand der Wissenschaft zum Erlernen von neuen Dingen 
+Ein aktueller Ansatz um schnell neue Inhalte zu Lernen ist das sogenannte "Game-Based Learning". Dieser Ansatz geht von einem spielerischen Lernen aus. Neue Lerninhalte werden in einem digitalen Spiel aufbereitet. Digitale Spiele sind nach Wagner /cite{wag} ein regelbasiertes,
+interaktives Medium, das Spielende „emotional bindet und innerhalb eines von der objektiven Realität abgegrenzten Raums stattfindet“ und dessen „zugrunde liegende Interaktionstechnologie rein digitaler Natur ist“. Dieser Ansatz verspricht Spaß beim Lernen von neuen Inhalten. Dieser Spaß fördert das kreative Denken und hilft neue Lerninhalte einfacher zu verstehen und vor allem besser behalten und verinnerlichen zu können. 
 
 
 \chapter{Grundlagen}
@@ -62,18 +64,21 @@ In unserer Arbeit wollen wir die Recommendersysteme in Form eines Expertensystem
 
 %% ===========================
 \chapter{Nutzer}
-Da unsere Arbeit die Adaption auf den Nutzer bezieht, müssen wir zuerst klären, welcher konkrete Nutzer bei unserer Arbeit in Frage kommt. Hierzu wollen wir die einzelnen Nutzerrollen der Zielsoftware mit deren Charakteristika vorstellen.
+Eine klare Vorgabe in unserer Arbeit war die Adaptivität auf Nutzer. Damit die Zielgrupppe der Software klar wird, werden im Folgenden die Personas erklärt, die für unsere Zielgruppe der Software bildet. Aufgrund dieser Personas werden wir eine Klassifizierung des Nutzers durchführen. Diese Klassifizierung soll uns dabei helfen die Lösungsansätze passend auszuwählen und später zu bewerten.
 
 
 \section{Nutzerrollen}
-Das Anwendungsfeld der Software ist wie in Einleitung beschrieben eine Hochschule. Im Mittelpunkt der Anwendung steht der Student, der sozusagen der Endkunde ist. Alle Dienstleistungen, die von der Software übernommen werden sind für den Studenten. Hierbei werden verschiedene Prozesse durchlaufen, die von verschiedenen Personen während des sogenannten Studen-Lifecycles gesteuert werden. Im folgenden werden wir erklären, wie die gegebene Nutzerrolle die Zielsoftware verwendet und welche Ziele er bei der Verwendung verfolgt.
+Das Anwendungsfeld der Software ist wie in Einleitung beschrieben eine Hochschule. Im Mittelpunkt der Anwendung steht der Student, der sozusagen der Endkunde ist. Alle Dienstleistungen, die von der Software übernommen werden sind für den Studenten. Hierbei werden verschiedene Prozesse durchlaufen, die von verschiedenen Personen während des sogenannten Studen-Lifecycles gesteuert werden. Im Folgenden werden wir erklären, wie die gegebene Nutzerrolle die Zielsoftware verwendet und welche Ziele bei der Verwendung verfolgt werden. Die einzelnen Personas sind in der Diskussion mit unseren Betreuern und auf von der CAS bereitgestellten Materialien entstanden.
+
 \subsection{Professoren}
 Beginnen wollen wir mit der Persona Professor. Er ist für die Lerninhaltsaufbereitung des Studenten zuständig. Ein Professor hat eher weniger mit der Software zu tun, da die meiste Arbeit die Sekretärin abnimmt. Die Verwendung beschränkt sich auf das Lesen eines Termines oder das Eintragen einer Lehrveranstaltung. Weiterhin auf ein eventuelles Einladungsmanagement. Ein Professor ist somit ein Nutzer, der sehr wenig Zeit mit der Verwendung der Software aufbringt. Somit muss er, wenn er in einem Problem bei der Verwendung der Software steckt schnell eine Lösung haben. Weiterhin ist die Zeit des Professors aufgrund seiner Aufgabengebiete begrenzt, womit eine lange Einarbeitungszeit ebenfalls vermieden werden sollte.
+
 \subsection{Studenten}
 Die Studenten sind wie Eingangs erwähnt die Profiteure der Software. Dadurch, dass alle Prozesse, die von der Software abgebildet werden nur für den Studenten da sind, steht er im Fokus. Die Verwendung der Software hält sich allerdings vom zeitlichen Aufwand her im Rahmen. Er verwendet zwar viele Bereiche der Software allerdings nur sehr kurz und schnell. Sein primäres Ziel bei der Verwendung ist Ähnlich dem Professor. Er möchte schnell an Informationen kommen und sich nicht lange in eine Software einarbeiten, da er andere Inhalte für sein Studium lernen muss. Somit sollte er komplizierte Lerninhalte einfach aufbereitet bekommen, so dass er schnell ein gutes Verständnis erlangen kann.
 
 \subsection{Studierendensekretariat}
 Das Studierendensekretariat oder auch Help-Desk genannt ist für die komplette Verwaltungsarbeit eines Studenten zuständig. Die Nutzer dieser Rolle verwenden die Software im täglichen Gebrauch und dies für mehrere Stunden am Tag. Aus diesem Grund müssen sie die Software möglichste effektiv und schnell beherrschen. Komplexe Prozesse bei der Bedienung der Software muss den Arbeitern geläufig sein, um effizient arbeiten zu können. Weiterhin muss bei einem konkreten Problem beim Verwenden der Software schnell Abhilfe geschaffen werden. 
+
 \subsection{Studiengangsbearbeiter}
 Eine besondere Rolle im Lebenszyklus der Software nimmt die Rolle des Studiengangsbearbeiters ein. Diese ist für die Modellierung von Studiengängen zuständig. Diese Art von Nutzer verwenden die Software sehr intensiv und müssen sehr effizient arbeiten, da sie die Software jeden Tag intensiv mit vielen Inhalten nutzen. Die Modellierungsinhalte, welche mit der Software getätigt werden sind sehr komplex und erfordern ein hohes Maß an Konzentration. Damit man diesen Wünschen gerecht werden kann, muss unsere Lösung viel Lerninhalt in kurzer Zeit aufbereiten und für den Nutzer sinnvoll erklären. Natürlich kann die Hilfe nur einen kleinen Teil der Inhalte lernen. Die Basis sollte weiterhin eine intensive Schulung sein, bevor der Nutzer die Software verwendet. Die adaptive Online-Lernhilfe sollte den Nutzer bei der Lösungsfindung in diesem Fall unterstützen und ihm helfen, die Inhalte der Schulung evtl. nachträglich noch einmal zu wiederholen und zu vertiefen.
 
@@ -81,7 +86,7 @@ Eine besondere Rolle im Lebenszyklus der Software nimmt die Rolle des Studiengan
 Eine weitere Rolle, die nicht missachtet werden sollte sind die Administratoren der Software. Diese sind für die Konfiguration der einzelnen Bereiche in der Software zuständig und normalerweise erster Ansprechpartner, wenn Probleme bei der Verwendung der Software auftreten. Der Admin muss normalerweise entscheiden, ob es ein Software-Fehler ist oder ein anderes Problem besteht. Bei kleineren Hochschulen kann diese Rolle auch wegfallen, da nicht genügend Kapital für die Finanzierung einer solchen Stelle vorhanden ist. Da die Zielsoftware für größere Hochschulen mit teils sehr technischen Schwerpunkten (Informatik, Maschinenbau, etc.) konzipiert ist, ist anzunehmen, dass es gesonderte Stellen zur Administration der Software gibt. Die Schwerpunkte hier beim eigentlichen Verwenden der Software liegen in dem Deployment von Updates oder dem Lösen von Konfigurationsproblemen. Für diese Zielgruppe soll das Hilfesystem vorwiegend schnell Informationen bereitstellen, so dass der Admin unverzüglich weiterarbeiten kann.
 
 \section{Nutzer Klassifizierung}
-Nachdem die einzelnen Nutzerrollen vorgestellt wurden, werden wir eine Klassifizierung vornehmen um für die klassifizierten Nutzergruppen die passenden Lösungsansätze vorstellen zu können. Die Klassifizierung erfolgte anhand der in Abbildung \ref{img1:userRoles} sichtbaren Kriterien: Nutzunghäufigkeit (Powernutzer, Gelegenheitsnutzer) und Art der Nutzung (effektive Nutzer, informationsorientierte Nutzer und schnelle Nutzung). Diese Kriterien haben wir den jeweiligen Rollen zugeordnet. Durch die Verknüpfung in einem ungerichteten Graphen sind wir zu der Nutzerklassifizierung gekommen. Die Nutzerklassen werden wir im folgenden erläutern.
+Nachdem die einzelnen Personas vorgestellt wurden, folgt die Klassifizierung in verschiedene Nutzerklassen. Die Klassifizierung erfolgte anhand der in Abbildung \ref{img1:userRoles} sichtbaren Kriterien: schnelle, effektive Nutzung sowie lösungsorientierte und informationsorientierte Nutzung. Unter informationsinteressiert verstehen wir eine Nutzung der Software um an Informationen wie Stundenplan oder Rauminformation schnell zu gelangen. Diese Kriterien haben wir den jeweiligen Rollen zugeordnet. Durch die Verknüpfung in einem ungerichteten Graphen sind wir zu der Nutzerklassifizierung gekommen.
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width = 0.95\textwidth]{Nutzerrollen.png}
@@ -89,13 +94,14 @@ Nachdem die einzelnen Nutzerrollen vorgestellt wurden, werden wir eine Klassifiz
 \label{img1:userRoles}
 \end{center}
 \end{figure} 
-
-\subsection{Lösungsorientierte Nutzer}
-Der lösungsorientierte Nutzer möchte schnell die Lösung zu seinem aktuellen Problem haben. Er möchte sich nicht lange mit Online-Hilfesystemen oder langen Suchen beschäftigen. Zu dieser Gruppe gehören vor allem die Gelegenheitsnutzer. Diese verwenden die Software selten und sind deshalb wenig angetan, wenn sie lange in einem bestimmten Problem stecken. Ihnen muss schnell geholfen werden, so dass kein Frust beim Verwenden der Software aufkommt. Hier läuft die Lösung nach dem Prinzip ab, dass ein Problem beim Verwenden der Software auftritt und schnellstmöglich eine Lösung her muss. 
 \subsection{Powernutzer}
-Diese Nutzergruppe verwendet die Software meist jeden Tag und dies mehrere Stunden täglich. Dies bedeutet es müssen sehr viele Inhalte gelernt werden. Wenn möglich in möglichst kurzer Zeit. Dies erfordert ein Lernen von mehreren Wegen zur Lösung des Problems. Für diese Art von Nutzern zählt eine effektive Nutzung der Software. Die Lerninhalte müssen somit möglichst umfassend sein und entsprechend aufbereitet werden. 
-\subsection{Studenten}
-Die Studenten erhalten bei uns eine extra Klasse. Sie setzen die Software sehr sporadisch ein und möchten nicht viel neue Inhalte lernen, da sie schon mit anderen Themen ihres Studiums sehr beschäftigt sind. Wenn sie die Software verwenden, dann möchten sie nicht viel neue Inhalte lernen. Wenn überhaupt, dann mit Spaß verbunden. Sie benötigen somit eine extra Motivation um neue Inhalte der Software zu lernen. Weiterhin schwierig bei dieser Nutzergruppe ist die Diversität der Nutzertypen. Dies bedeutet, dass viele verschiedene Fachbereiche, von sehr technisch versierten Leuten wie Ingenieursstudiengänge bis stark intellektuelle Studiengänge wie Germanistik oder Jura bedient werden müssen. Diese starke Diversität veranlasst uns die Gruppe der Studenten als extra Klasse zu betrachten. 
+Diese Nutzergruppe verwendet die Software meist jeden Tag und dies mehrere Stunden täglich. Dies bedeutet es müssen sehr viele Inhalte erlernt werden. Wenn möglich in möglichst kurzer Zeit. Dies erfordert ein Lernen von mehreren Wegen zur Lösung des Problems. Für diese Art von Nutzern zählt eine effektive Nutzung der Software. Die Lerninhalte müssen somit möglichst umfassend sein und entsprechend aufbereitet werden. 
+
+\subsection{Gelegenheitsnutzer}
+Der lösungsorientierte Nutzer möchte schnell die Lösung zu seinem aktuellen Problem haben. Er möchte sich nicht lange mit Online-Hilfesystemen oder langen Suchen beschäftigen. Zu dieser Gruppe gehören vor allem die Gelegenheitsnutzer. Diese verwenden die Software selten und sind deshalb wenig angetan, wenn sie lange in einem bestimmten Problem stecken. Ihnen muss schnell geholfen werden, so dass kein Frust beim Verwenden der Software aufkommt. Hier läuft die Lösung nach dem Prinzip ab, dass ein Problem beim Verwenden der Software auftritt und schnellstmöglich eine Lösung her muss. 
+
+\subsection{Spezielle Nutzer}
+Die Studenten erhalten bei uns eine extra Klasse. Sie werden als sogenannte "spezielle Nutzer" eingestuft. Sie setzen die Software sehr sporadisch ein und möchten nicht viele neue Inhalte lernen, da sie schon mit anderen Themen ihres Studiums sehr beschäftigt sind. Wenn neue Inhalte für die Verwendung der Software gelernt werden müssen, dann mit Spaß verbunden. Sie benötigen somit eine extra Motivation um neue Inhalte der Software zu lernen. Weiterhin schwierig bei dieser Nutzergruppe ist die Diversität der Nutzertypen. Dies bedeutet, dass viele verschiedene Fachbereiche, von sehr technisch versierten Leuten wie Ingenieursstudiengänge bis stark intellektuelle Studiengänge wie Germanistik oder Jura bedient werden müssen. Diese starke Diversität veranlasst uns die Gruppe der Studenten in die Klasse "spezielle Nutzer" einzuordnen.
 
 
 %% content.tex
@@ -119,13 +125,19 @@ Abbildung \ref{img1:criteria} zeigt unsere Bewertungskriterien, die im Folgenden
 \subsubsection{Anfangskosten}
 \subsubsection{Wartungskosten}
 \subsubsection{Nutzen}
+
 \subsection{Technisch}
+Da Software ein sehr technisches Gut ist, müssen technische Bewertungskriterien zur Bewertung der Lösungsansätze verwendet werden. Im Folgenden sollen unsere Kriterien für die Arbeit aufgezeigt werden.
+
 \subsubsection{Wartbarkeit}
+Die Wartbarkeit einer Software kann mithilfe der sogenannten internen Softwarequalität beschreiben \cite{softQuali}. Die interne Software-Qualität bewertet die Software anhand von der gesamten Wartbarkeit des Systems. Hier geht es insbesondere darum, wie schnell es geht den vorhandenen Code umzustrukturieren und wie das Design anpassbar ist, so dass es auf zukünftige Anforderungen der Software reagieren kann. In unserem Umfeld ist es wichtig, dass die Lösung dem Zielsystem Software passend gemacht wird. Im Zuge der Wartbarkeit ist es wichtig, das für neue Hilfethemen, die aufgrund von neuen Anforderungen hinzukommen das vorhandene Hilfesystem schnell angepasst werden kann, so dass die Kosten im Rahmen gehalten werden kann.
 \subsubsection{Datenschutz}
+Aufgrund der aktuellen politischen Lage mit der NSA-Affäre müssen heutige Softwaresysteme sehr sorgfältig mit dem Thema Datenschutz umgehen. Jedes System, was Informationen vom Nutzer sammelt, wird hier kritisch bewertet, da die Daten ein wichtiges Gut sind. In unserer Arbeit ist die Informationsbereitstellung des Nutzers sehr wichtig, da anhand der bereitgestellten Informationen die Hilfeinhalte aufbereitet werden um eine Adaption zu gewährleisten. Die entwickelten Lösungsansätze müssen einer kritischen Prüfung zum Thema Datenschutz standhalten.
 \subsubsection{Usability}
+Das Thema Usability ist ein wichtiges Qualitätsmerkmal von Software \cite{usability}. Ohne eine vernünftige Usability ist die Akzeptanz der Software sehr gering und der Nutzer möchte die Software nur ungern verwenden. Weiterhin möchte der Nutzer bei der Benutzung schnell zu seinem Ziel kommen und die Aufgabe möglichst effizient bearbeiten. Heutige Software kann komplexe Prozesse einfach abbilden. Dies ist das Hauptziel der Usability. Schwierige Sachverhalte einfach aufzubereiten, so dass sie jeder verstehen kann. In unserer Arbeit müssen aus diesem Grund die Lösungsansätze mit der Usability bewertet werden.
 
 \section{Klassische Hilfe}
-Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer weiterhelfen. Durch eine schnelle Lösungsfindung und Aufbereitung soll dem Nutzer geholfen werden.
+Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer weiterhelfen. Durch eine schnelle Lösungsfindung und Aufbereitung soll dem Nutzer möglichst schnell und effektiv geholfen werden. 
 
 \begin{figure}[ht]
 \begin{center}
@@ -135,13 +147,14 @@ Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer we
 \end{center}
 \end{figure} 
 \subsection{Erläuterung}
-Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img2:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten.
+Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img2:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten. Dieser Ansatz funktioniert am Besten, wenn der Nutzer sein konkretes Problem kennt und auch entsprechend beschreiben kann. Dies ist bei Software sehr oft gegeben, was bedeutet ein Nutzer hängt gerade in einer Anwendung und weiß wonach er genau suchen muss.
 
 \section{Lernspiel-App}
 Der zweite Lösungsansatz soll eine Lösung in Form einer sogenannten Lernspiel-App aufzeigen. Zuerst wird eine Begriffsdefinition von App durchgeführt bevor die konkrete Lösung vorgestellt wird.
 
 \subsection{App}
 Der App-Begriff bezieht sich in unserer Arbeit auf einen kleinen Prozess, der mit einer Software durchgeführt werden kann. Dieses Prinzip kann man am Besten anhand von Unix-Systemen erklären. Hier gibt es für jedes kleine Teilproblem, welches bei der Verwendung eines Computers eintritt ein extra Programm. Dieses Programm macht genau die Aufgabe, die es soll und keine zusätzlichen Extra-Funktionen. Ein gutes Beispiel ist ein Texteditor. Bei einer grafischen Oberfläche beherrscht dieser beispielsweise die Funktion suchen und ersetzen. Weiterhin kann der Editor beispielsweise bestimmte Textfelder rot markieren und eine Datei von dem geschriebenen anlegen. In einer Unix-Konsole gäbe es für alle diese Funktionen einen extra Befehl, der genau diese eine Funktion erfüllt. Dies hat den Vorteil, dass sehr effizient gearbeitet werden kann. Dieses Prinzip verwenden die modernen Apps auf dem Smartphone ebenfalls. Für jeden Anwendungsfall gibt es genau eine App. Das Smartphone besitzt somit eine Ansammlung mehrerer Apps zur Lösung von mehreren Teilproblemen. Eine solche Plattform ist in Abbildung \ref{img1:smartDesign} abgebildet. Auf der linken Seite befinden sich die Icons von mehreren Apps. Auf der rechten Seite ist der konkrete Prozessworkflow, in diesem Beispiel eine Kontaktliste sichtbar. 
+
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width = 0.95\textwidth]{smartDesign.png}
@@ -151,10 +164,10 @@ Der App-Begriff bezieht sich in unserer Arbeit auf einen kleinen Prozess, der mi
 \end{figure} 
 
 \subsection{Lernspiel}
-Unter einem Lernspiel verstehen wir die Verknüpfung von Gamification-Ansätzen mit dem Erlernen von neuen Inhalten. Hier sind Konzepte für ein umfangreiches Belohnungssystem von Interesse. Ein Nutzer kann eine Belohnung erhalten wenn er eine bestimmte Aufgabe lösen kann. Diese Aufgabe bezieht sich immer auf das Software-Feld. Hierzu erhält der Nutzer ein gezieltes Problem, welches er eventuell auf verschiedenen Wegen lösen kann. Dieser Prozess des Lernens soll durch eine Belohnung am Ende motiviert werden. Erreicht der Nutzer ein bestimmtes Lernziel, so erhält er beispielsweise einen sogenannten Badge (kleine Auszeichnung) oder erreicht das nächste Level, wo ihm ein komplexeres Problem erwartet. 
+Unter einem Lernspiel verstehen wir die Verknüpfung von Gamification-Ansätzen mit dem Erlernen von neuen Inhalten. Hier sind Konzepte für ein umfangreiches Belohnungssystem von Interesse. Ein Nutzer kann eine Belohnung erhalten wenn er eine bestimmte Aufgabenstellung lösen kann. Diese Aufgabe bezieht sich immer auf das Software-Feld. Hierzu erhält der Nutzer ein gezieltes Problem, welches er eventuell auf verschiedenen Wegen lösen kann. Dieser Prozess des Lernens soll durch eine Belohnung am Ende motiviert werden. Erreicht der Nutzer ein bestimmtes Lernziel, so erhält er beispielsweise einen sogenannten Badge (kleine Auszeichnung) oder erreicht das nächste Level, wo ihm ein komplexeres Problem erwartet. 
 
 \subsection{Lösungsansatz}
-Die Verbindung vom App-Prinzip mit dem Lernspiel soll unser zweiter Lösungsansatz repräsentieren. Das daraus folgende Konzept soll eine App designen, die komplexe Inhalte unserer Software in einem Spiel aufbereitet. Dieses Spiel besteht aus mehreren Leveln, die unterschiedliche Komplexitätsgrade beherbergen. Der Schwierigkeitsgrad der Lernspiel-App hängt von den Erfahrungen des Nutzers ab, der das Spiel durchführt. Wenn keine Erfahrungen von seitens des Nutzers bestehen, so fängt er bei der einfachsten Problemstellung an und arbeitet sich durch mehrere Levels. Hierbei muss aufgepasst werden, dass der ganze Ansatz nicht zu verspielt ist, da die problembasierten Nutzer sich nicht lange mit so einem simplen Spiel aufhalten wollen. Für die Studentengruppe hingegen soll der Spaß im Vordergrund stehen weshalb eine spannende Aufbereitung der Inhalte wichtig ist. Damit die effektiven Nutzer bedient werden können, muss die Lernspiel-App viele Problemstellungen innerhalb der Software behandeln und möglichst viele Levels anbieten.
+Die Verbindung vom App-Prinzip mit dem Lernspiel soll unser zweiter Lösungsansatz repräsentieren. Das daraus folgende Konzept soll eine App designen, die komplexe Inhalte unserer Software in einem Spiel aufbereitet. Dieses Spiel besteht aus mehreren Levels, die unterschiedliche Komplexitätsgrade beherbergen. Der Schwierigkeitsgrad der Lernspiel-App hängt von den Erfahrungen des Nutzers ab, der das Spiel durchführt. Wenn keine Erfahrungen von seitens des Nutzers bestehen, so fängt er bei der einfachsten Problemstellung an und arbeitet sich durch mehrere Levels. Hierbei muss aufgepasst werden, dass der ganze Ansatz nicht zu verspielt ist, da die problembasierten Nutzer sich nicht lange mit so einem simplen Spiel aufhalten wollen. Für die Studentengruppe hingegen soll der Spaß im Vordergrund stehen weshalb eine spannende Aufbereitung der Inhalte wichtig ist. Hier spielen besonders Inhalte aus dem Game-Based Learning eine wichtige Rolle. Die Lerninhalte müssen in eine spannende Form gepackt werden, damit dem Anwender nicht langweilig wird.  Für die effektiven Nutzer, bzw. Powernutzer muss die Lernspiel-App viele Problemstellungen innerhalb der Software behandeln und möglichst viele Levels anbieten. Weiterhin muss für die Nutzer ebenfalls ein großer Grad an Diversität erreicht werden. Die Diversität besteht in der Aufbereitung von mehreren Bereichen innerhalb der Software. Also von einem Bereich zum Erfassen neuer Adressdatensätze bis hin zum Modellieren von komplexen Studiengängen.
 
 
 \section{Expertensystem}
@@ -167,11 +180,12 @@ Unsere abschließende Empfehlung soll die Lösungsansätze anhand der Nutzerklas
 \section{Bewertung der Lösungsansätze anhand der aufgestellten Kriterien}
 
 \section{Konkrete Empfehlung}
+Unsere Empfehlung sieht eine Kombination der beiden Lösungsansätze Lernspiel-App und Expertensystem vor. Mithilfe dieser Kombination sehen wir die Ziele der einzelnen Nutzergruppen am besten zufriedengestellt. Eine klassische Online-Lernhilfe besteht im Software-Zielsystem bereits. Aus diesem Grund bietet der Lösungsansatz nicht neues. Die Lernspiel-App hingegen eignet sich hervorragend um komplexe Sachverhalte in der Software auf eine spielerische Art zu erlernen. Wer sich hierbei als besonders gut hervortut, der kann im Anschluss dann als Experte für ein Expertensystem genommen werden. Das Expertensystem bietet den Hauptvorteil, dass dem Nutzer bei einem konkreten Problem schnell geholfen werden kann. Beim Einsatz des Expertensystem ist wie gesagt die Zeitkomponente wichtig, da ein Nutzer der Software nicht ständig mit Anfragen von anderen Nutzern gestört werden möchte, muss diese Lösung auch von der Universität bei der die Lösung zum Einsatz kommt getragen werden, damit der Ansatz funktioniert. Somit die konkrete Empfehlung wäre eine oder mehrere Lernspiel-Apps, die komplexe Inhalte der Software für den Nutzer einfach aufbereiteten, so dass er schnell viel neues erlernen kann. Wer besonders kreative Lösungen für die Problemstellung in der App findet, der eignet sich als späterer Experte, der bei konkreten Problemen in der Verwendung der Software unterstützen kann.
 
 \chapter{Zusammenfassung}
-Die Aufgabe dieser Seminararbeit war es, ein adaptives Online-Hilfesystem zu entwickelt. Gestartet haben wir mit der Frage nach der Adaption. Hier haben wir uns, durch die Vorgabe unserer Betreuer, auf die Adaption an den Nutzer konzentriert. Nachdem wir alle Nutzerrollen aufgezeigt haben, konnten wir eine Klassifizierung der Nutzer durchführen. Diese Klassifizierung hat uns geholfen auf den Nutzer passende Lösungsansätze zu entwickeln. Diese sind durch verschiedene Grundlagen des problembasierten und differenziellen Lernens entstanden. Weiterhin konnten wichtige Ansätze der Gamification in einer App-Lösung erarbeitet werden. Eine weitere Lösung ist durch eine Recommendersystem-Grundlage entstanden. Damit ein besserer Vergleich stattfinden konnte, wurde die bisherige Lösung eines klassischen Hilfesystems vorgestellt. In der folgenden Gegenüberstellung der Lösungsansätze wurden die Lösungen zuerst mit den Nutzerklassen und anschließend nach unseren selbst auferlegten Kriterien bewertet. Die daraus folgende Bewertung hat gezeigt, dass eine Kombination von allen drei Lösungsansätzen sinnvoll ist und durchgeführt werden kann.
+Die Aufgabe dieser Seminararbeit war es, ein adaptives Online-Hilfesystem zu entwickelt. Gestartet haben wir mit der Frage nach der Adaption. Hier haben wir uns, durch die Vorgabe unserer Betreuer, auf die Adaption an den Nutzer konzentriert. Nachdem wir alle Nutzerrollen aufgezeigt haben, konnten wir eine Klassifizierung der Nutzer durchführen. Diese Klassifizierung hat uns geholfen auf den Nutzer passende Lösungsansätze zu entwickeln. Diese sind durch verschiedene Grundlagen des problembasierten und differenziellen Lernens entstanden. Weiterhin konnten wichtige Ansätze der Gamification in einer App-Lösung erarbeitet werden. Eine weitere Lösung ist durch eine Recommendersystem-Grundlage entstanden. Damit ein besserer Vergleich stattfinden konnte, wurde die bisherige Lösung eines klassischen Hilfesystems vorgestellt. In der folgenden Gegenüberstellung der Lösungsansätze wurden die Lösungen zuerst mit den Nutzerklassen und anschließend nach unseren selbst auferlegten Kriterien bewertet. Die daraus folgende Bewertung hat gezeigt, dass eine Kombination von allen drei Lösungsansätzen sinnvoll ist und durchgeführt werden kann. Eine klassische Lernhilfe besteht bereits und wird durch die beiden zusätzlichen Lösungsalternativen Lernspiel-App und Expertensystem ergänzt.
 
-\subsection{Ausblick}
+\chapter{Ausblick}
 Für eine konkrete Ausarbeitung unserer Empfehlung ist eine Ausarbeitung eines Konzeptes basierend auf unseren Lösungsansätzen der nächste Schritt. Die aufgezeigten Konzepte sollen hierbei in einen konkreten Software-Workflow implementiert werden, so dass eine Lernspiel-App entstehen kann. Das Ziel dieser App soll es sein, die Nutzer zu schulen und ihnen neue Lerninhalte der Software zu vermitteln. Weiterhin sollen, darauf aufbauend, führende Experten identifiziert werden, die anderen Nutzern bei konkreten Problemen bei der Verwendung der Software schnell weiterhelfen können.
 
 
