--- a/text/content.tex
+++ b/text/content.tex
@@ -89,8 +89,8 @@ Eine weitere Rolle, die nicht missachtet werden sollte sind die Administratoren 
 Nachdem die einzelnen Personas vorgestellt wurden, folgt die Klassifizierung in verschiedene Nutzerklassen. Die Klassifizierung erfolgte anhand der in Abbildung \ref{img1:userRoles} sichtbaren Kriterien: schnelle, effektive Nutzung sowie lösungsorientierte und informationsorientierte Nutzung. Unter informationsinteressiert verstehen wir eine Nutzung der Software um an Informationen wie Stundenplan oder Rauminformation schnell zu gelangen. Diese Kriterien haben wir den jeweiligen Rollen zugeordnet. Durch die Verknüpfung in einem ungerichteten Graphen sind wir zu der Nutzerklassifizierung gekommen.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width = 0.95\textwidth]{Nutzerrollen.png}
-\caption{Nutzerrollen mit einer Bewertung anhand von Kriterien}
+\includegraphics[width = 1.0\textwidth]{Nutzerklassifiizierung.png}
+\caption{Nutzerklassifizierung abgeleitet aus Nutzungskriterien}
 \label{img1:userRoles}
 \end{center}
 \end{figure} 
@@ -114,8 +114,8 @@ Dieses Kapitel widmet sich den Lösungsansätzen, die als Grundlage für unsere 
 Abbildung \ref{img1:criteria} zeigt unsere Bewertungskriterien, die im Folgenden erläutert werden sollen.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width = 0.95\textwidth]{Kriterienbaum.png}
-\caption{Unsere Bewertungskriterien in einem Graphen dargestellt}
+\includegraphics[width = 1.0\textwidth]{Bewertungskriterien.png}
+\caption{Bewertungskriterien für die Lösungsansatzbewertung}
 \label{img1:criteria}
 \end{center}
 \end{figure} 
